src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Manual Lead Form</fullName>
        <description>Form which appears while creating lead manually</description>
        <isActive>false</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Dead</fullName>
        </values>
        <values>
            <fullName>Existing customer</fullName>
        </values>
        <values>
            <fullName>Interested</fullName>
        </values>
        <values>
            <fullName>Move to Marketing</fullName>
        </values>
        <values>
            <fullName>Nurture</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Purchased</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unresponsive</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AE__c</fullName>
        <description>Name of AE on basis of Owner or PreviousOwner</description>
        <formula>IF(ISPICKVAL(Stage__c , &apos;SAL&apos;), (
  IF(ISPICKVAL(Status, &apos;Interested&apos;), (Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName ), null)
), (
  IF(ISPICKVAL(Stage__c , &apos;SQL&apos;) || ISPICKVAL(Stage__c , &apos;SDL&apos;), (Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName ), null)
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AllAgentsWithLast7DaysActivity__c</fullName>
        <formula>Instance__r.AllAgentsWithLast7DaysActivity__c</formula>
        <label>All Agents with last 7 days activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>All_Agents_with_last_30_days_activity__c</fullName>
        <formula>Instance__r.AllAgentsWithLast30DaysActivity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Agents with last 30 days activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>All_Traffic_Sources__c</fullName>
        <label>All Traffic Sources</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assigned_SDR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned SDR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authority__c</fullName>
        <label>Authority</label>
        <picklist>
            <picklistValues>
                <fullName>Unanswered</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supporting Evaluator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Authority_determined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authority determined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_determined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget determined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budgeted__c</fullName>
        <label>Budgeted</label>
        <picklist>
            <picklistValues>
                <fullName>Unanswered</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <label>Business</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CancelDripFlow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used by process builder which sends out emails(Sales drips). This is marked as true whenever lead is going to be converted(from apex code). This signals out the process builder to stop sending emails to converted leads.</description>
        <label>Cancel Drip Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ComplianceNeed__c</fullName>
        <label>Compliance Need</label>
        <picklist>
            <picklistValues>
                <fullName>Unanswered</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>HIPPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CountryName__c</fullName>
        <label>Country Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <description>This is mapped with the Create date at the Opportunity object which calculates age of complete cycle.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CreationStage__c</fullName>
        <label>CreationStage</label>
        <picklist>
            <picklistValues>
                <fullName>MQL</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SAL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CurrentSystem__c</fullName>
        <label>Current System</label>
        <picklist>
            <picklistValues>
                <fullName>Unanswered</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Nothing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Older Kayako Version</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared Inbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home grown system</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Another Helpdesk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Currently_Using__c</fullName>
        <label>Currently Using</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customers_with_last_7_days_activity__c</fullName>
        <formula>Instance__r.CustomersWithLast7DaysActivity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customers with last 7 days activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysInMQL__c</fullName>
        <formula>TODAY()-StageToMQLDate__c</formula>
        <label>Days in MQL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysInSAL__c</fullName>
        <formula>StageToSALDate__c - StageToMQLDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in SAL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysInSDL__c</fullName>
        <formula>IF(StageToSALDate__c&gt;StageToSDLDate__c,IF(NOT(ISNULL(StageToSDLDate__c)),StageToSALDate__c-StageToSDLDate__c,0),IF(NOT(ISNULL(StageToSDLDate__c)),Today()-StageToSALDate__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in SDL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysInSQL__c</fullName>
        <formula>IF(NOT(ISNULL(StageToSDLDate__c)), (StageToSDLDate__c -  StageToSQLDate__c ), (
IF(IsConverted,  (ConvertedDate - StageToSQLDate__c), 0) 
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in SQL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysInSRL__c</fullName>
        <formula>IF(NOT(ISNULL(StageToSRLDate__c)),Today()-StageToSRLDate__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in SRL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysToContactEstablished__c</fullName>
        <formula>StatusToContactedDate__c - StageToSALDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Contact Established</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysToQualify__c</fullName>
        <formula>StatusToQualifiedDate__c - StageToSALDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Qualify</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Unanswered</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <label>Device</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disqualified__c</fullName>
        <description>True, if the lead was once disqualified</description>
        <formula>IF( NOT(ISBLANK( StageToSDLDate__c )), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <formula>Instance__r.Name</formula>
        <label>Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DripFromEmail__c</fullName>
        <description>The email address which is used to send drip emails</description>
        <formula>Owner:User.DripFromEmail__c</formula>
        <inlineHelpText>The email address used to send out drip emails</inlineHelpText>
        <label>Drip From Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExistingCustomer__c</fullName>
        <label>Existing Customer</label>
        <picklist>
            <picklistValues>
                <fullName>Kayako</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kayako 4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ExpiryEmailSent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used by process builder to stop multiple trial expiry emails to be sent after the trial has expired.</description>
        <label>Expiry email sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Factors__c</fullName>
        <label>Factors</label>
        <picklist>
            <picklistValues>
                <fullName>Regional Issues/Data Residency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid Contact Details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>G2_User_Action__c</fullName>
        <label>G2 User Action</label>
        <picklist>
            <picklistValues>
                <fullName>Downloaded a document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested a demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested to be contacted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested a Custom Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested Free Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested a mobile demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Watched a video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Viewed a report</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GA_Client_ID_Formula__c</fullName>
        <formula>gaconnector_Google_Analytics_Client_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GA Client ID (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCLID__c</fullName>
        <label>GCLID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_AdWords_Source__c</fullName>
        <description>Hubspot synced field, coming from Google AdWords Campaigns.</description>
        <label>GA Original Source</label>
        <picklist>
            <picklistValues>
                <fullName>-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offline Sources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Traffic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referrals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organic Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid Social</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HasLeadMovedToExpiredTrial__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It will be true if Lead has moved To &quot;Expired Trial&quot; even once</description>
        <label>Has Lead Moved To Expired Trial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc_Score__c</fullName>
        <label>HubSpot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__HubSpot_Intelligence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HubSpot Intelligence</label>
        <referenceTo>HubSpot_Inc__HubSpot_Intelligence__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Address__c</fullName>
        <description>IP Address of lead origination</description>
        <inlineHelpText>IP Address of lead origination</inlineHelpText>
        <label>IP Address</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Included_In_Drip_Date__c</fullName>
        <description>This field will hold the date on which the lead was included in the drip.</description>
        <label>Included In Drip Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Instance_Creation_Date__c</fullName>
        <formula>Instance__r.CreatedDate</formula>
        <label>Instance Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Instance_ID__c</fullName>
        <formula>Instance__r.Instance_ID__c</formula>
        <label>Instance ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Instance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Instance</label>
        <referenceTo>Instance__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsAutoRejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsKayakoGoodFit__c</fullName>
        <label>Is Kayako a good fit?</label>
        <picklist>
            <picklistValues>
                <fullName>Unanswered</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Meets all needs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meets Most needs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Sure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsReassigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsReassigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsResponded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsResponded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Current_User__c</fullName>
        <description>Can be used in criteria to evaluate if current session user is the lead owner. Returns boolean and help create conditional statements.</description>
        <formula>OwnerId =  $User.Id</formula>
        <label>Is Current User?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Existing_Customer__c</fullName>
        <formula>IF(ISNULL(ExistingCustomer__c) &amp;&amp;  TEXT(KA_Product__c) &lt;&gt; &quot;Loyalty&quot;,FALSE,TRUE)</formula>
        <label>Is Existing Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Owner_Active__c</fullName>
        <description>Helps in identifying if lead is assigned to a valid user. Valid users are active and their profile is either of SDR or AE.</description>
        <formula>Owner:User.IsActive  &amp;&amp;  (Owner:User.Profile.Id  = &quot;00e10000000eHyT&quot;  ||    Owner:User.Profile.Id  = &quot;00e10000000eH9P&quot;)</formula>
        <label>Is Owner Valid?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KA_ConvertedOrderID__c</fullName>
        <description>This will hold the Paid Order ID when license will be converted from lead to paid order.</description>
        <label>Converted Order ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KA_Domain__c</fullName>
        <externalId>true</externalId>
        <label>Domain</label>
        <length>253</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KA_HubSpot_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>THis should be true if data is coming from HubSpot</inlineHelpText>
        <label>HubSpot Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KA_InstanceID__c</fullName>
        <externalId>true</externalId>
        <label>Instance ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KA_InstanceUUID__c</fullName>
        <label>Instance UUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KA_Lead_closure_date__c</fullName>
        <label>Lead closure date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>KA_NumberSeats__c</fullName>
        <label>Seats</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KA_Owner_email_id__c</fullName>
        <label>Owner Email ID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>KA_Owner_first_name__c</fullName>
        <label>Owner First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KA_Owner_last_name__c</fullName>
        <label>Owner Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KA_ProductType__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>OnDemand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Download</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>KA_Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>Fusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scale</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>KA_Territory__c</fullName>
        <label>Territory</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KA_TrialExpiryDate__c</fullName>
        <label>Trial Expiry Date ka</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeadType__c</fullName>
        <label>Lead Type</label>
        <picklist>
            <controllingField>LeadSource</controllingField>
            <picklistValues>
                <fullName>Inbound</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sign up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Us</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premigration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Hunt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Starter Plan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Email__c</fullName>
        <formula>Owner:User.Email</formula>
        <label>Lead Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MQL_Infer_Formula__c</fullName>
        <formula>IF(AND(NOT(ISNULL(infer3__Score_Object_ID__c)) , NOT(ISBLANK(infer3__Infer_Rating__c))), IF(     
AND(OR(infer3__Infer_Rating__c == &apos;A&apos; , infer3__Infer_Rating__c == &apos;B&apos;), 
NumberOfEmployees &gt;= 50), &apos;MQL 1&apos;, 
IF(AND(OR(infer3__Infer_Rating__c == &apos;A&apos; , infer3__Infer_Rating__c == &apos;B&apos;), 
NumberOfEmployees &lt; 50), &apos;MQL 2&apos;, 
IF(AND(OR(infer3__Infer_Rating__c == &apos;C&apos; , infer3__Infer_Rating__c == &apos;D&apos;), 
NumberOfEmployees &gt;= 50), &apos;MQL 3&apos; , IF( 
AND(OR(infer3__Infer_Rating__c == &apos;C&apos; , infer3__Infer_Rating__c == &apos;D&apos;), 
NumberOfEmployees &lt; 50), &apos;MQL 4&apos;, &apos;&apos; )) 
) 
),
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MQL Infer</inlineHelpText>
        <label>MQL Infer-2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ManualOwnerChange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ManualOwnerChange</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Needs_determined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs determined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Field for Inside SDR, Sales, or other notes.</description>
        <inlineHelpText>Field for Inside SDR, Sales, or other notes.</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nurtured__c</fullName>
        <description>True, if the lead was once nurtured</description>
        <formula>IF( NOT(ISBLANK( StatusToNurtureDate__c )), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nurtured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityType__c</fullName>
        <label>Opportunity Type</label>
        <picklist>
            <picklistValues>
                <fullName>New Business</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Existing - Seat Expansion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing - Plan Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing - K4 to Novo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing - K4 Download to K4 OnDemand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing - K4 Download to K4 OnDemand: P</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Original_Promo_Code__c</fullName>
        <description>Promo Codes from Hidden form fields</description>
        <label>Original Promo Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Manager_Email__c</fullName>
        <label>Owner Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Persona__c</fullName>
        <label>Persona</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Gary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sienna</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PreviousOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The previous owner of the lead. This field is updated as and when the user of the lead changes, the owner field on lead is set to the new owner and this field is set to the current value of owner field.</description>
        <label>Previous Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_Kayako_Plan__c</fullName>
        <label>Proposed Kayako Plan</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Reassign_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reassign Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reassigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reassigned_To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rejected__c</fullName>
        <description>True, if the lead was once rejected</description>
        <formula>IF( NOT(ISBLANK( StageToSRLDate__c )), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remove_from_Autopilot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remove from Autopilot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Respone_Time__c</fullName>
        <formula>If( SLA_Breached__c, &quot;0 days 0 hours 15 min&quot;, 
if(ISBLANK(SDR_First_Modified_Date_Time__c),&quot;&quot;, 
IF ((SDR_First_Modified_Date_Time__c - SDR_Assign_Date__c) &gt; 0, 
TEXT(FLOOR((SDR_First_Modified_Date_Time__c - SDR_Assign_Date__c))) &amp; &quot; days &quot; &amp; 
TEXT( FLOOR( 24 * ((SDR_First_Modified_Date_Time__c - SDR_Assign_Date__c) - FLOOR((SDR_First_Modified_Date_Time__c - SDR_Assign_Date__c)) ))) &amp; &quot; hours &quot; &amp; 
TEXT( ROUND(60 * (ROUND( 24 * ((SDR_First_Modified_Date_Time__c - SDR_Assign_Date__c)- FLOOR((SDR_First_Modified_Date_Time__c - SDR_Assign_Date__c)) ),8) - FLOOR( 
ROUND( 24 * ((SDR_First_Modified_Date_Time__c - SDR_Assign_Date__c) - FLOOR((SDR_First_Modified_Date_Time__c - SDR_Assign_Date__c)) ),8)) ),0)) &amp; &quot; min &quot; 
, &quot;0 days 0 hours 1 min&quot;))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Time</label>
        <type>Text</type>
    </fields>
</CustomObject>